@@ -22,6 +22,7 @@ core 2.2.1 - not released yet
 	* Added: TodoyuForm takes to $params data and makes it available over ->getParams() and ->getParam()
 	* Added: $limit parameter for TodoyuArray::trimExplode() which is passed directly to explode()
 	* Added: TodoyuBaseObject->isUpdated() to check whether the record was updated at least once
+	* Added: TodoyuRecordManager::updateRecordRaw() which bypasses the cleanup of updateRecord()
 	* Added: TodoyuBaseObject->isFlagSet() as a shortcut to check whether a field has the value 0 or 1 (example: is_active)
 	* Changed: Removed $parseConstants from TodoyuArray::intExplode(). Was not used and supported. Added $limi parameter as for trimExplode()
 	* Changed: Use js version instead of php the check for the first input in form
